--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
+    "push": "git add .; git commit -m 'update'; git push;",
+    "start": "vite",
+    "build": "vite build --base=/product-searcher/",
     "preview": "vite preview"
   },
   "devDependencies": {
