--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "file-saver": "^2.0.5",
     "responsive-layout": "^0.0.1-security",
     "tabulator-tables": "^5.6.1",
     "uuid": "^9.0.1",
     "vite-plugin-full-reload": "^1.0.5",
-    "vite-plugin-html-inject": "^1.0.1"
+    "vite-plugin-html-inject": "^1.0.1",
+    "xlsx": "^0.18.5"
   }
 }
